@@ -71,7 +71,7 @@ upnp::upnp(io_service& ios, connection_queue& cc
 	, m_log_callback(lcb)
 	, m_retry_count(0)
 	, m_io_service(ios)
-	, m_socket(ios, udp::endpoint(address_v4::from_string("239.255.255.250", ec), 1900)
+	, m_socket(udp::endpoint(address_v4::from_string("239.255.255.250", ec), 1900)
 		, boost::bind(&upnp::on_reply, self(), _1, _2, _3))
 	, m_broadcast_timer(ios)
 	, m_refresh_timer(ios)
@@ -81,6 +81,9 @@ upnp::upnp(io_service& ios, connection_queue& cc
 	, m_cc(cc)
 {
 	TORRENT_ASSERT(cb);
+
+	error_code ec;
+	m_socket.open(ios, ec);
 
 	if (state)
 	{
