@@ -22,6 +22,10 @@
 	* fix uTP edge case where udp socket buffer fills up
 	* fix nagle implementation in uTP
 
+	* consistently disconnect the same peer when two peers simultaneously connect
+	* fix local endpoint queries for uTP connections
+	* small optimization to local peer discovery to ignore our own broadcasts
+	* try harder to bind the udp socket (uTP, DHT, UDP-trackers, LSD) to the same port as TCP
 	* relax file timestamp requirements for accepting resume data
 	* fix performance issue in web seed downloader (coalescing of blocks sometimes wouldn't work)
 	* web seed fixes (better support for torrents without trailing / in web seeds)
